--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<h1>JOE JOHNSON.</h1>
 			
-			<img class="avatar" src="/images/avatar.jpg" alt="Joe Johnson on a bike" height="350" width="350">
+			<img class="avatar" src="./images/avatar.jpg" alt="Joe Johnson on a bike" height="350" width="350">
 
 		<hr class="hr_left">
 	
