content updates etc.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Joe Johnson - About Me</title>
+	<title>PMH - About Me</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -15,16 +15,17 @@
 		<a href="./portfolio.html" class="inactive">Portfolio</a>
 	</nav>
 
-		<h1>JOE JOHNSON.</h1>
+		<h1>PMH.</h1>
 			
 			<img class="avatar" src="./images/avatar.jpg" alt="Joe Johnson on a bike" height="350" width="350">
 
 		<hr class="hr_left">
-	
+			
+			<div class="main_body">
 			<h2>I enjoy life as a developer.</h2>
 				<p>
-				I'm Joe Johnson, a Developer based in NYC. I Have ten years of experience in the graphic design world, specializing in the creation of responsive websites.
-				</p>
+				 I'm PMH, a Developer(ish) and occasional two-wheel jaunt enthusiast based in jolly-old-London, England. I Have ten years of experience in the graphic design world, specialising in the creation of responsive websites that set brands apart by quite closely resembling circa-2005 MySpace profiles with too many zany HTML additions. <!--I never said that they set them apart in a good way, you just assumed that, for shame -->
+				</p> 
 
 		<hr>
 
