--- a/portfolio.html
+++ b/portfolio.html
@@ -15,12 +15,12 @@
 		<a href="./portfolio.html" class="active">Portfolio</a>
 	</nav>
 
-		<h1>JOE JOHNSON.</h1>
+		<h1>PMH.</h1>
 
 		<hr>
 
 			<h2>Experience</h2>
-				I recently graduated from a Front-End Web Development course at General Assembly where I learned HTML, CSS, JavaScript, jQuery and how to be an <strong>awesome</strong> Front-End Web Developer! During my spare time, I enjoy senior water aerobics, pickling, and spending time with my goldfish, Jerry.</p>
+				I recently graduated from a Front-End Web Development course at General Assembly where I learned HTML, CSS, JavaScript, jQuery and how to be an <strong>awesome</strong> Front-End Web Developer! During my spare time, I browse political memes and send them to people whose patience is probably wearing very, very thin.</p>
 				
 		<hr>
 
